syntax = "proto3";
package messenger;

import "common.proto";
import "object.proto";
import "pipeline.proto";
import "timestamp.proto";
option go_package = "ecos/edge-node/gaia";

service Gaia {
  rpc UploadBlockData(stream UploadBlockRequest) returns (Result) {}
  rpc DeleteBlock(DeleteBlockRequest) returns (Result) {}
  rpc GetBlockData(GetBlockRequest) returns (stream GetBlockResult) {}
}

message UploadBlockRequest {
  oneof payload {
    Chunk chunk= 1;
    ControlMessage message = 2;
  }
}

message GetBlockRequest {
  string block_id = 1;
  uint64 cur_chunk = 2;
  uint64 term = 3;
}

message GetBlockResult {
  oneof payload {
    Chunk chunk= 1;
    ControlMessage message = 2;
  }
}

message DeleteBlockRequest {
  string block_id = 1;
  Pipeline pipeline = 2;
  uint64 term = 3;
}

message ControlMessage {
  enum Code {
    BEGIN = 0;
    EOF = 1;
  }
  Code code = 1;
  BlockInfo block = 2;
  Pipeline pipeline = 3;
  uint64 term = 4;
}

message Chunk {
  bytes content = 1;
  uint64 read_bytes = 2;
}

message BlockStatic {
  string block_id = 1;
  string object_id = 2;
  uint64 size = 3;
  Timestamp lastVisit = 4;
}
